# omegle-in-rust

./: .gitignore  Cargo.toml  README.md
src/: handler.rs  index.js  main.rs  server.rs
