[package]
name = "notchat-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
shuttle-actix-web = "0.52.0"
shuttle-runtime = "0.52.0"
tokio = { version = "1.26.0", features = ["full", "rt-multi-thread"] }
actix = "0.13"
actix-web-actors = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4"] }
rand = "0.8"